# cosmic-ext-marketwatch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
flatpak/: cargo-sources.json  com.github.MiracleForge.cosmic-ext-marketwatch.desktop  com.github.MiracleForge.cosmic-ext-marketwatch.json  com.github.MiracleForge.cosmic-marketwatch.desktop  com.github.MiracleForge.cosmic-marketwatch.json  lauch-applet.sh
i18n/en/: cosmic_ext_marketwatch.ftl  cosmic_marketwatch.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  main.rs  marketwatch.rs  utils.rs
src/components/: mod.rs
src/components/applet/: applet.rs  mod.rs
src/components/header/: header.rs  mod.rs
src/components/maincard/: maincard.rs  mod.rs
src/components/wallet/: mod.rs  wallet.rs
