[package]
name = "cosmic-ext-marketwatch"
version = "1.0.1"
edition = "2024"
license = "GPL-3.0-only"
description = "Real-time stock market ticker for the COSMIC desktop"
repository = "https://github.com/MiracleForge/cosmic-ext-marketwatch"

[dependencies]
async-stream = "0.3.6"
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
reqwest = { version = "0.11", features = ["json"] }
rust-embed = "8.7.2"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
serde_json = "1"
dirs = "5"
notify-rust = "4"
futures = "0.3"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]


[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
